fix bug: overlap footer when show error message

--- a/app/assets/stylesheets/xifi.css
+++ b/app/assets/stylesheets/xifi.css
@@ -62,7 +62,7 @@ svg {
 }
 
 footer {
-	margin-top: 10px;
+	margin-top: 30px;
 }
 
 .layoutContainer {
